--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
+    "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0"
   },
